# huygens

./: README.md  __init__.py  animate.py  back.py  base.py  box.py  boxs.py  diagram.py  flatten.py  front.py  load_svg.py  loadsvg.py  pov.py  pyproject.toml  render.py  requirements.txt  sat.py  setup.py  simulate.py  test_cairo.py  text.py  turtle.py
doc/: Makefile  Untitled.ipynb  about.html  about.md  canvas.html  canvas.ipynb  canvas.py  doctest.py  huygens_canvas.ipynb  huygens_canvas.md  huygens_canvas.nbconvert.ipynb  index.html  index.md  make_nb.py  mkdoc.py  requirements.txt  run_tests.py  superstyle.css  template.html  test_box.html  test_box.py  test_boxs.html  test_boxs.py  test_canvas.html  test_canvas.py  test_diagram.html  test_diagram.py  test_sat.html  test_sat.py  test_turtle.html  test_turtle.py  turtle.html  turtle.ipynb  turtle.py  wiggle.html  wiggle.ipynb  wiggle.py
huygens/: .gitignore  __init__.py  all.py  animate.py  argv.py  back.py  base.py  bicategory.py  box.py  cell.py  diagram.py  flatten.py  front.py  huytex.py  live.py  loadsvg.py  namespace.py  pathtool.py  pov.py  sat.py  simulate.py  text.py  the_turtle.py  tool.py  turtle.py  variable.py  zx.py
huygens/doc/: index.html  index.md  mkdoc.py  run_tests.py  template.html  test_box.html  test_box.py  test_canvas.html  test_diagram.html  test_diagram.py  test_sat.html  test_sat.py  test_text.py  test_turtle.html  test_turtle.py
huygens/front/: __init__.py
huygens/wiggle/: __init__.py  cell.py  cell_experimental.py  shapes.py  strict.py  test_wiggle.py
