[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "huygens"
version = "0.0.1"
authors = [
  { name="Simon Burton", email="simon@arrowtheory.com" },
]
description = "compositional vector graphics"
readme = "README.md"
requires-python = ">=3.0"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/punkdit/huygens"
"Bug Tracker" = "https://github.com/punkdit/huygens/issues"

